Fixed table spacing to use proper padding. Removed unnecessary line spacing.

--- a/public/javascripts/SVLabel/css/svl-onboarding.css
+++ b/public/javascripts/SVLabel/css/svl-onboarding.css
@@ -135,3 +135,7 @@
 .tutorial-cell-end {
     width: 50%
 }
+
+.tutorial-spacer {
+    padding-bottom: 20px;
+}
